# optimade-maker

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release_and_publish.yml
examples/aiida_archive/: .gitignore  README.md  data.csv  example.aiida  optimade.yaml
examples/aiida_archive/.testing/: first_entry.json
examples/bzipped_pymatgen/: .gitignore  optimade.yaml
examples/bzipped_pymatgen/.testing/: first_entry.json
examples/direct_from_jsonl/: optimade.jsonl  optimade.yaml
examples/direct_from_jsonl_gz/: .gitignore  optimade.yaml
examples/folder_of_cifs/: optimade.yaml
examples/folder_of_cifs/.testing/: first_entry.json
examples/simple_zip_of_cif/: .gitignore  data.csv  optimade.yaml
examples/simple_zip_of_cif/.testing/: first_entry.json
examples/xyz_files_no_compression/: C_1.xyz  H_2.xyz
examples/xyz_files_no_compression/.testing/: first_entry.json
examples/zip_of_cif/: .gitignore  extra_config.json
examples/zip_of_cif/.testing/: first_entry.json
examples/zip_of_cif/data/: data.csv  data2.csv
examples/zip_of_cif/structures/cifs/: 55c564f6-ac6a-4122-b8d9-0ad9fe61e961.cif  cc1a41b1-a841-4818-baf1-a6c1441dc52a.cif
examples/zip_of_cif_and_xyz/: .gitignore  optimade.yaml
examples/zip_of_cif_and_xyz/.testing/: first_entry.json
examples/zip_of_cif_and_xyz/structures/molecules/: benzene.xyz  butadiene.xyz
examples/zip_of_cif_and_xyz/structures/set1/: 991bec7a-b3a8-49af-ba6d-be5afd685cd4.cif
examples/zip_of_cif_and_xyz/structures/set2/: 2aee2118-f484-4d53-90dc-0464cc6c0995.cif  41b8077b-e051-45ed-88b4-57d8ecce59d0.cif  8b4cac08-928f-443a-8a26-5042d9970d76.cif
mc_optimade/: Dockerfile  README.md  __init__.py  docker-compose.jsonl.yml  optimade.jsonl
mc_optimade/src/jsonl_server/: load_data.py
mc_optimade/src/optimade_yaml_config/examples/folder_of_cifs/: data2.csv  refs.bib
mc_optimade/src/optimade_yaml_config/examples/folder_of_cifs/cifs/: 55c564f6-ac6a-4122-b8d9-0ad9fe61e961.cif
scripts/: generate_apache_file.py  mcloud_master.py
scripts/cifs_to_jsonl/: cifs_to_jsonl.py
scripts/odbx_file_serialization/: run.py
src/aiida_to_jsonl/: aiida_to_jsonl.py
src/archive/: README.md  archive_record.py  cli.py  scan_records.py  utils.py
src/cifs_to_jsonl/: optimade.jsonl
src/jsonl_server/: load_data.py  requirements.txt
src/mc_optimade/: .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/mc_optimade/examples/bzipped_pymatgen/: optimade.yaml  part_1.json.bz2
src/mc_optimade/examples/bzipped_pymatgen/.testing/: first_entry.json
src/mc_optimade/examples/direct_from_jsonl/: example.jsonl  optimade.yaml
src/mc_optimade/examples/direct_from_jsonl/.testing/: first_entry.json
src/mc_optimade/examples/folder_of_cifs/: optimade.yaml
src/mc_optimade/examples/folder_of_cifs/.testing/: first_entry.json
src/mc_optimade/examples/folder_of_cifs/data/: data.csv
src/mc_optimade/examples/xyz_files_no_compression/: H_1.xyz  data.csv  optimade.yaml
src/mc_optimade/examples/xyz_files_no_compression/.testing/: first_entry.json
src/mc_optimade/mc_optimade/: __init__.py  cli.py  config.py  convert.py  parsers.py
src/mc_optimade/mc_optimade/archive/: archive_record.py  cli.py  scan_records.py  utils.py
src/mc_optimade/tests/: test_archive.py  test_convert.py  test_yaml.py
src/mcloud_implementation/: apache-vhosts-sockets.conf  generate_apache_file.py  landing_page.html.template  mcloud_master.py  remove_api.sh  requirements.txt  version_redirect.html.template
src/mcloud_implementation/docs/: index.md
src/mcloud_implementation/landing_page/: index.html.template
src/mcloud_implementation/landing_page/static/css/: extra.css
src/odbx_file_serialization/: requirements.txt  run.py
src/optimade_launch/: README.md  __init__.py  __main__.py  config.py  core.py  database.py  instance.py  profile.py  pyproject.toml  util.py  version.py
src/optimade_launch/optimade_launch/: __main__.py  application_state.py  core.py  database.py  instance.py  profile.py  util.py
src/optimade_launch/optimade_launch/dockerfiles/: Dockerfile  README.md  requirements.txt  run.sh
src/optimade_launch/tests/: conftest.py  test_cli.py  test_config.py  test_converter.py  test_instance.py  test_profile.py  test_started_instance.py
src/optimade_launch/tests/_static/: config.yaml  optimade_config.json
src/optimade_maker/: __init__.py  aiida_plugin.py  cli.py  config.py  convert.py  logger.py  mongo_utils.py  parsers.py  serve.py
src/optimade_maker/aiida_plugin/: __init__.py  config.py
src/optimade_maker/archive/: archive_record.py  scan_records.py  utils.py
src/optimade_yaml_config/: __init__.py  test_yaml.py
src/optimade_yaml_config/examples/folder_of_cifs/: README.md  optimade.yaml
src/optimade_yaml_config/examples/folder_of_cifs/structures/cifs/: cc1a41b1-a841-4818-baf1-a6c1441dc52a.cif
src/optimake/: __init__.py  cli.py  config.py  convert.py  logger.py  parsers.py  serve.py
src/optimake/archive/: archive_record.py  cli.py  scan_records.py
src/optimake/serve/: mongo_utils.py  serve.py  serve_w_docker_compose.py
tests/: conftest.py  test_archive.py  test_cli.py  test_config.py  test_convert.py  test_converter.py  test_instance.py  test_serve.py  test_yaml.py
