[project]
name = "mc_optimade"
version = "0.1"

dependencies = [
    "pydantic<2.0",
    "optimade[ase]~=0.25",
    "pyyaml~=6.0",
    "pymatgen~=2023.9",
    "pandas",
    "pybtex",
    "tqdm",
    "requests",
]

[project.optional-dependencies]
tests = ["pytest"]
dev = ["black", "ruff", "pre-commit", "mypy", "isort", "types-all"]

[tool.ruff]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
target-version = "py310"
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
follow_imports = "skip"

[tool.isort]
known_first_party = "mc_optimade"
profile = "black"
