[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "optimade_launch"
authors = []
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dynamic = ["version", "description"]

dependencies = [
    "optimade[server]~=0.24.0",
    "requests",
    "click-spinner~=0.1.0",
    "docker~=5.0.2",
    "toml~=0.10.2",
    "requests~=2.28.0"
]

[project.optional-dependencies]
tests = [
    "pytest~=7.0.1",
    "pytest-asyncio==0.20.3",
    "pytest-mock-resources~=2.7.0",
    "python-on-whales~=0.61.0",
]

[project.scripts]
optimade-launch = "optimade_launch.__main__:cli"